--- a/views/edit-blog.hbs
+++ b/views/edit-blog.hbs
@@ -73,7 +73,7 @@
                         
                     <div class="mb-3">
                         <label for="inputImage" class="form-label">Upload Image</label>
-                        <input type="text" name="inputImage" class="form-control" id="inputImage" placeholder="Input Image URL">
+                        <input type="text" name="inputImage" value="{{blog.image}}" class="form-control" id="inputImage" placeholder="Input Image URL">
                     </div>
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
