--- a/views/add-blog.hbs
+++ b/views/add-blog.hbs
@@ -11,7 +11,7 @@
 
     <body>
         <!-- Navbar Bootstrap-->
-        {{!-- <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="/">
                     <img src="../public/assets/images/Logo difa-01-01.jpg" alt="Logo">
@@ -28,13 +28,13 @@
                             <a class="nav-link active text-white" aria-current="page" href="/blog">Blog</a>
                         </li>
                     </ul>
-                    <a class="btn text-white bg-color px-3">Contact Me</a>
+                    <a class="btn text-white bg-color px-3" href="/contact">Contact Me</a>
                 </div>
             </div>
-        </nav> --}}
+        </nav>
 
         <!-- NavBar -->
-        <nav>
+        {{!-- <nav>
             <div class="left">
             <a href="/">
                 <img src="../public/assets/images/Logo difa-01-01.jpg" alt="logo" />
@@ -51,7 +51,7 @@
             <div class="right">
             <a href="/contact"> Contact Me </a>
             </div>
-        </nav>
+        </nav> --}}
 
         <!-- Form -->
         <div class="container-fluid d-flex align-items-center justify-content-center">
