--- a/views/edit-blog.hbs
+++ b/views/edit-blog.hbs
@@ -11,7 +11,7 @@
 
     <body>
         <!-- Navbar Bootstrap-->
-        {{!-- <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="/">
                     <img src="../public/assets/images/Logo difa-01-01.jpg" alt="Logo">
@@ -28,30 +28,11 @@
                             <a class="nav-link active text-white" aria-current="page" href="/blog">Blog</a>
                         </li>
                     </ul>
-                    <a class="btn text-white bg-color px-3">Contact Me</a>
+                    <a class="btn text-white bg-color px-3" href="/contact">Contact Me</a>
                 </div>
             </div>
-        </nav> --}}
-
-        <!-- NavBar -->
-        <nav>
-            <div class="left">
-            <a href="/">
-                <img src="../public/assets/images/Logo difa-01-01.jpg" alt="logo" />
-            </a>
-            <ul>
-                <li>
-                <a href="/">Home</a>
-                </li>
-                <li>
-                <a href="/blog">Blog</a>
-                </li>
-            </ul>
-            </div>
-            <div class="right">
-            <a href="/contact"> Contact Me </a>
-            </div>
         </nav>
+
 
         <!-- Form -->
         <div class="container-fluid d-flex align-items-center justify-content-center">
