--- a/public/assets/css/style-form.css
+++ b/public/assets/css/style-form.css
@@ -1,132 +1,149 @@
 body {
-    background: linear-gradient(white, white, azure);
-    margin: 0px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    font-size: larger;
+  background: linear-gradient(white, white, azure);
+  margin: 0px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: larger;
 }
 nav {
-    color: azure;
-    background: linear-gradient(rgb(6, 109, 134),rgb(0, 62, 78));
-    display: flex;
-    height: 7vh;
+  color: azure;
+  background: linear-gradient(rgb(6, 109, 134), rgb(0, 62, 78));
+  display: flex;
+  height: 7vh;
 }
 nav div {
-    display: flex;
-    align-items: center;
-    flex: 50%;
-    }
+  display: flex;
+  align-items: center;
+  flex: 50%;
+}
 nav div.left {
-    padding-left: 100px;
-    }
+  padding-left: 100px;
+}
 nav ul {
-    list-style-type: none;
-    }
+  list-style-type: none;
+}
 nav ul li {
-    display: inline;
-    }
+  display: inline;
+}
 nav ul li a {
-    font-size: x-large;
-    color: azure;
-    text-decoration: none;
-    padding: 30px;
-    }
+  font-size: x-large;
+  color: azure;
+  text-decoration: none;
+  padding: 30px;
+}
 nav .left ul li a:hover {
-    text-shadow: 0px 0px 10px rgb(255, 0, 149);
-    color: rgb(255, 255, 255);
+  text-shadow: 0px 0px 10px rgb(255, 0, 149);
+  color: rgb(255, 255, 255);
 }
 nav img {
     border-left: 3px solid azure;
     border-right: 3px solid azure;
-    width: 70px; height: 70px;
-    
-}
-nav div.right {
-    padding-right: 100px;
+    width: 70px;
+    height: 70px;
     display: flex;
-    justify-content: flex-end;
+    align-items: center;
   }
+nav div.right {
+  padding-right: 100px;
+  display: flex;
+  justify-content: flex-end;
+}
 nav .right a {
-    color: azure;
-    background-color: linear-gradient(rgb(6, 109, 134),rgb(0, 62, 78));
-    border-radius: 10px;
-    border: 3px solid azure;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 10px 20px;
-    text-align: center;
-    transition: 0,5s;
+  color: azure;
+  background-color: linear-gradient(rgb(6, 109, 134), rgb(0, 62, 78));
+  border-radius: 10px;
+  border: 3px solid azure;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 10px 20px;
+  text-align: center;
+  transition: 0, 5s;
 }
 nav .right a:hover {
-    background-color: azure;
-    color: rgb(0, 62, 78);
-} 
+  background-color: azure;
+  color: rgb(0, 62, 78);
+}
 
 /* Contact Form */
 .form {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    width: 400px;
-    height: 850px;
-    margin: 5% auto;
-    padding: 30px;
-    border-radius: 20px;
-    background: linear-gradient(rgb(0, 90, 121),rgb(0, 62, 78));
-    box-shadow: 0px 0px 5px rgb(0, 39, 53);   
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  width: 400px;
+  height: 850px;
+  margin: 5% auto;
+  padding: 30px;
+  border-radius: 20px;
+  background: linear-gradient(rgb(0, 90, 121), rgb(0, 62, 78));
+  box-shadow: 0px 0px 5px rgb(0, 39, 53);
 }
 
 .contact {
-    margin: 10px 0px 15px;
-    color: ghostwhite;
-    font-size: 35px;
-    text-align: center;
+  margin: 10px 0px 15px;
+  color: ghostwhite;
+  font-size: 35px;
+  text-align: center;
 }
 .labelform {
-    cursor: pointer;
+  cursor: pointer;
 }
-.name, .email, .phone, .skills, .subject, .message {
-    color: ghostwhite;
-    margin-top: 10px;
-    font-size: 25px;
-    text-shadow: 2px 2px 5px rgb(0, 68, 90);
-    transition: 0,5s;
+.name,
+.email,
+.phone,
+.skills,
+.subject,
+.message {
+  color: ghostwhite;
+  margin-top: 10px;
+  font-size: 25px;
+  text-shadow: 2px 2px 5px rgb(0, 68, 90);
+  transition: 0, 5s;
 }
-.name:hover, .email:hover, .phone:hover, .skills:hover, .subject:hover, .message:hover {
-    text-shadow: 0px 0px 10px rgb(255, 0, 149);
-    color: rgb(255, 255, 255);
+.name:hover,
+.email:hover,
+.phone:hover,
+.skills:hover,
+.subject:hover,
+.message:hover {
+  text-shadow: 0px 0px 10px rgb(255, 0, 149);
+  color: rgb(255, 255, 255);
 }
-.namename, .emailemail, .phonephone, .messagemessage, .subjectsubject {
-    background-color: ghostwhite;
-    border-radius: 10px;
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0px 15px;
-    border: 3px solid ghostwhite;
-    box-sizing: border-box;
+.namename,
+.emailemail,
+.phonephone,
+.messagemessage,
+.subjectsubject {
+  background-color: ghostwhite;
+  border-radius: 10px;
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0px 15px;
+  border: 3px solid ghostwhite;
+  box-sizing: border-box;
 }
 .buttons {
-    margin-top: 15px;
-    border-radius: 10px;
-    padding: 5px 10px;
-    color: ghostwhite;
-    border: 3px solid ghostwhite;
-    background: linear-gradient(rgb(6, 109, 134),rgb(0, 62, 78));
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    font-size: 20px;
-    cursor: pointer;
-    transition: 0,5s;
+  margin-top: 15px;
+  border-radius: 10px;
+  padding: 5px 10px;
+  color: ghostwhite;
+  border: 3px solid ghostwhite;
+  background: linear-gradient(rgb(6, 109, 134), rgb(0, 62, 78));
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  cursor: pointer;
+  transition: 0, 5s;
 }
 .buttons:hover {
-    background: azure;
-    color: rgb(0, 62, 78);
-} 
-.containers, .checkmark {
-    color: rgb(255, 255, 255);
-    font-size: 20px;
-    cursor: pointer;
-    margin: 15px 10px 10px 0px;
-    font-size: 20px;
-    cursor: pointer;
+  background: azure;
+  color: rgb(0, 62, 78);
+}
+.containers,
+.checkmark {
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  cursor: pointer;
+  margin: 15px 10px 10px 0px;
+  font-size: 20px;
+  cursor: pointer;
 }
