--- a/public/assets/css/style-index.css
+++ b/public/assets/css/style-index.css
@@ -43,6 +43,7 @@ nav img {
   display: flex;
   align-items: center;
 }
+
 nav div.right {
   padding-right: 100px;
   display: flex;
@@ -138,6 +139,7 @@ nav .right a:hover {
   width: 70%;
 }
 .td {
+  text-align: center;
   width: 30%;
   padding: 10px 15px;
   background-color: azure;
