--- a/views/add-blog.hbs
+++ b/views/add-blog.hbs
@@ -28,7 +28,27 @@
                             <a class="nav-link active text-white" aria-current="page" href="/blog">Blog</a>
                         </li>
                     </ul>
-                    <a class="btn text-white bg-color px-3" href="/contact">Contact Me</a>
+                    {{#if isLogin}}
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 px-5">
+        <li class="nav-item px-3">
+          <span class="nav-link active text-white" aria-current="page" href="/login"> Hello {{user.name}} </span>
+        </li>
+        <li class="nav-item px-3">
+          <a class="nav-link active text-white" aria-current="page" href="/logout">Logout</a>
+        </li>
+      </ul>
+      {{else}}
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 px-5">
+        <li class="nav-item px-3">
+          <a class="nav-link active text-white" aria-current="page" href="/register">Register</a>
+        </li>
+        <li class="nav-item px-3">
+          <a class="nav-link active text-white" aria-current="page" href="/login">Login</a>
+        </li>
+      </ul>
+      {{/if}}
+
+                    <a class="btn text-white bg-color px-3 ms-5" href="/contact">Contact Me</a>
                 </div>
             </div>
         </nav>
@@ -59,7 +79,7 @@
 
                 <p class="h2 text-center">Create Blog Post</p>
                 
-                <form action="/blog" method="post">
+                <form action="/blog" method="post" enctype="multipart/form-data">
 
                     <div class="mb-3">
                         <label for="inputTitle" class="form-label">Title</label>
@@ -73,7 +93,7 @@
                         
                     <div class="mb-3">
                         <label for="inputImage" class="form-label">Upload Image</label>
-                         <input type="text" name="inputImage" class="form-control" id="inputImage" placeholder="Input Image URL">
+                         <input type="text" name="inputImage" class="form-control" id="inputImage" placeholder="Input Image">
                     </div>
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
