--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,124 +1,151 @@
-<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Contact Form</title>
-        <link rel="stylesheet" href="../public/assets/css/style-form.css">
-    </head>
+  <head>
+    <title>Contact Form</title>
+    <link rel="stylesheet" href="../public/assets/css/style-form.css" />
+  </head>
 
-    <body>
-        <nav class="display-contact">
-            <div class="left">
-                <a href="/">
-                    <img src="../public/assets/images/Logo difa-01-01.jpg" alt="My Logo">
-                </a>
-            <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/blog">Blog</a>
-                </li>
-            </ul>
-            </div>
-            <div class="right">
-                <a href="/contact">Contact Me</a>
-            </div>
-        </nav>
+  <body>
+    <nav class="display-contact">
+      <div class="left">
+        <a href="/">
+          <img
+            src="../public/assets/images/Logo difa-01-01.jpg"
+            alt="My Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="/blog">Blog</a>
+          </li>
+        </ul>
+         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 px-5">
+        <li class="nav-item px-3">
+          <a
+            class="nav-link active text-white"
+            aria-current="page"
+            href="/register"
+          >Register</a>
+        </li>
+        <li class="nav-item px-3">
+          <a
+            class="nav-link active text-white"
+            aria-current="page"
+            href="/login"
+          >Login</a>
+        </li>
+      </ul>
+      </div>
+      <div class="right">
+        <a href="/contact">Contact Me</a>
+      </div>
+     
+    </nav>
+
+    <div>
+      <form class="form">
+
+        <div class="contact">
+          <label> Contact Form</label>
+        </div>
+
+        <div class="name">
+          <label for="input-name" class="labelform">Name</label>
+          <input
+            class="namename"
+            id="input-name"
+            type="text"
+            placeholder="Type your name"
+          />
+        </div>
+
+        <div class="email">
+          <label for="input-email" class="labelform">e-Mail</label>
+          <input
+            class="emailemail"
+            id="input-email"
+            type="email"
+            placeholder="Type your email"
+          />
+        </div>
+
+        <div class="phone">
+          <label for="input-number" class="labelform">Phone Number</label>
+          <input
+            class="phonephone"
+            id="input-number"
+            type="number"
+            placeholder="Type your phone number"
+          />
+        </div>
+
+        <div class="subject">
+          <label for="input-subject" class="labelform"> Subject </label>
+          <select class="subjectsubject" id="input-subject">
+            <option value=""></option>
+            <option> I'm Hiring </option>
+            <option> Problem With Our Side </option>
+          </select>
+        </div>
 
         <div>
-            <form class="form">
-        
-                <div class="contact">
-                    <label> Contact Form</label>
-                </div>
+          <label class="skills" class="labelform"> Skills </label>
 
-                <div class="name">
-                    <label for="input-name" class="labelform">Name</label>
-                    <input class="namename"
-                    id="input-name"
-                    type="text"
-                    placeholder="Type your name">
-                </div>
-                
-                <div class="email">
-                    <label for="input-email" class="labelform">e-Mail</label>
-                    <input class="emailemail"
-                    id="input-email"
-                    type="email"
-                    placeholder="Type your email">
-                </div>
-            
-                <div class="phone">
-                    <label for="input-number" class="labelform">Phone Number</label>
-                    <input class="phonephone"
-                    id="input-number" 
-                    type="number"
-                    placeholder="Type your phone number">
-                </div>
+          <br />
 
-                <div class="subject">
-                    <label for="input-subject" class="labelform"> Subject </label>
-                    <select class="subjectsubject"
-                    id="input-subject">
-                        <option value=""></option>
-                        <option> I'm Hiring </option>
-                        <option> Problem With Our Side </option>
-                    </select>
-                </div>
+          <input
+            id="input-programming"
+            type="checkbox"
+            name="hobi1"
+            value="Programming"
+            class="checkmark"
+          />
+          <label for="input-programming" class="containers">
+            Programming
+          </label>
 
-                <div>
-                    <label class="skills" class="labelform"> Skills </label> 
+          <br />
 
-                    <br>
+          <input
+            id="input-football"
+            type="checkbox"
+            name="hobi2"
+            value="Football"
+            class="checkmark"
+          />
+          <label for="input-football" class="containers"> Football </label>
 
-                    <input 
-                    id="input-programming"
-                    type="checkbox"
-                    name="hobi1"
-                    value="Programming"
-                    class="checkmark">
-                    <label for="input-programming" class="containers"> Programming </label>
+          <br />
 
-                    <br>
-
-                    <input
-                    id="input-football"
-                    type="checkbox"
-                    name="hobi2"
-                    value="Football"
-                    class="checkmark">
-                    <label for="input-football" class="containers"> Football </label>
-                        
-                    <br>
-
-                    <input 
-                    id="input-sleep"
-                    type="checkbox"
-                    name="hobi3"
-                    value="Sleep"
-                    class="checkmark">
-                    <label for="input-sleep" class="containers"> Sleep </label>
-                </div>
-                
-                <div class="message">
-                    <label
-                    for="input-message" class="labelform"> Message </label>
-                    <textarea
-                    class="messagemessage"
-                    id="input-message"
-                    name="input-message"
-                    cols="1"
-                    rows="1">
-                    </textarea>
-                </div>
-
-                <button
-                    class="buttons"
-                    type="button"
-                    onclick="submitData()"> Submit
-                </button> 
-            </form>
+          <input
+            id="input-sleep"
+            type="checkbox"
+            name="hobi3"
+            value="Sleep"
+            class="checkmark"
+          />
+          <label for="input-sleep" class="containers"> Sleep </label>
         </div>
-        <script src="form.js"></script>
-    </body>
+
+        <div class="message">
+          <label for="input-message" class="labelform"> Message </label>
+          <textarea
+            class="messagemessage"
+            id="input-message"
+            name="input-message"
+            cols="1"
+            rows="1"
+          >
+          </textarea>
+        </div>
+
+        <button class="buttons" type="button" onclick="submitData()">
+          Submit
+        </button>
+      </form>
+    </div>
+    <script src="form.js"></script>
+  </body>
 </html>
