--- a/views/edit-blog.hbs
+++ b/views/edit-blog.hbs
@@ -4,7 +4,7 @@
         {{!-- <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> --}}
-        <title>Halaman edit Blog</title>
+        <title>Edit Blog</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="../public/assets/css/style2.css">
     </head>
@@ -28,7 +28,27 @@
                             <a class="nav-link active text-white" aria-current="page" href="/blog">Blog</a>
                         </li>
                     </ul>
-                    <a class="btn text-white bg-color px-3" href="/contact">Contact Me</a>
+                     {{#if isLogin}}
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 px-5">
+        <li class="nav-item px-3">
+          <span class="nav-link active text-white" aria-current="page" href="/login"> Hello {{user.name}} </span>
+        </li>
+        <li class="nav-item px-3">
+          <a class="nav-link active text-white" aria-current="page" href="/logout">Logout</a>
+        </li>
+      </ul>
+      {{else}}
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 px-5">
+        <li class="nav-item px-3">
+          <a class="nav-link active text-white" aria-current="page" href="/register">Register</a>
+        </li>
+        <li class="nav-item px-3">
+          <a class="nav-link active text-white" aria-current="page" href="/login">Login</a>
+        </li>
+      </ul>
+      {{/if}}
+
+                    <a class="btn text-white bg-color px-3 ms-5" href="/contact">Contact Me</a>
                 </div>
             </div>
         </nav>
@@ -38,7 +58,7 @@
         <div class="container-fluid d-flex align-items-center justify-content-center">
             <div class="container-form">
 
-                <p class="h2 text-center">Create Blog Post</p>
+                <p class="h2 text-center">Edit Blog Post</p>
                 
                 <form action="/edit-blog/{{blog.id}}" method="post">
 
