--- a/views/index.hbs
+++ b/views/index.hbs
@@ -68,7 +68,7 @@
                 <th class="th"> Experience </th>
                 <th class="th"> Year </th>
               </tr>
-              {{#each data}}
+              {{#each skillCard}}
                 <tr>
                   <td class="td"> {{this.experience}} </td>
                   <td class="td"> {{this.year}} </td>
