--- a/views/add-blog.hbs
+++ b/views/add-blog.hbs
@@ -31,7 +31,7 @@
                     {{#if isLogin}}
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0 px-5">
         <li class="nav-item px-3">
-          <span class="nav-link active text-white" aria-current="page" href="/login"> Hello {{user.name}} </span>
+          <span class="nav-link active text-white" aria-current="page"> Hello {{user.name}} </span>
         </li>
         <li class="nav-item px-3">
           <a class="nav-link active text-white" aria-current="page" href="/logout">Logout</a>
@@ -93,7 +93,7 @@
                         
                     <div class="mb-3">
                         <label for="inputImage" class="form-label">Upload Image</label>
-                         <input type="text" name="inputImage" class="form-control" id="inputImage" placeholder="Input Image">
+                         <input type="file" name="inputImage" class="form-control" id="inputImage" placeholder="Input Image">
                     </div>
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
