--- a/views/blog-detail.hbs
+++ b/views/blog-detail.hbs
@@ -1,7 +1,6 @@
 <html>
   <head>
     <title>Creating Blog Page - detail</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../public/assets/css/style.css" />
   </head>
   <body>
@@ -20,27 +19,26 @@
           </li>
         </ul>
         {{#if isLogin}}
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 px-5">
+      <ul class="navbar-nav">
         <li class="nav-item px-3">
-          <span class="nav-link active text-white" aria-current="page" href="/login"> Hello {{user.name}} </span>
+          <span class="nav-link" href="/login"> Hello {{user.name}} </span>
         </li>
         <li class="nav-item px-3">
-          <a class="nav-link active text-white" aria-current="page" href="/logout">Logout</a>
+          <a class="nav-link" href="/logout">Logout</a>
         </li>
       </ul>
       {{else}}
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 px-5">
+      <ul class="navbar-nav">
         <li class="nav-item px-3">
-          <a class="nav-link active text-white" aria-current="page" href="/register">Register</a>
+          <a class="nav-link"  href="/register">Register</a>
         </li>
         <li class="nav-item px-3">
-          <a class="nav-link active text-white" aria-current="page" href="/login">Login</a>
+          <a class="nav-link"  href="/login">Login</a>
         </li>
       </ul>
       {{/if}}
       </div>
       <div class="right">
-        
         <a href="/contact"> Contact Me </a>
       </div>
     </nav>
@@ -50,7 +48,7 @@
       <div class="blog-detail-container">
         <h1>{{blog.title}}</h1>
         <div class="author">{{blog.postAt}} | {{blog.author}}</div>
-        <img src={{blog.image}} alt="detail" />
+        <img src="../upload/{{blog.image}}" alt="detail" />
         <p>
           {{blog.content}}
         </p>
