--- a/views/edit-blog.hbs
+++ b/views/edit-blog.hbs
@@ -74,7 +74,7 @@
                         
                     <div class="mb-3">
                         <label for="inputImage" class="form-label">Upload Image</label>
-                        <input type="file" name="inputImage" class="form-control" id="inputImage" value="../upload/{{blog.image}}" placeholder="Input Image">
+                        <input type="file" name="inputImage" class="form-control" id="inputImage" placeholder="Input Image">
                     </div>
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
